# pancake

./: Cargo.toml  README.md  reference.md  roadmap.md
.github/workflows/: rust.yml
benches/: recursive_fibonacci.rs
pancake/: Cargo.toml
pancake-macro/: Cargo.toml
pancake-macro/src/: lib.rs
pancake-macro/tests/: integration_test.rs
pancake/src/: arity.rs  ast.rs  eval.rs  inference_data.rs  lib.rs  main.rs  ops.rs  parse.rs  transform.rs  typeck.rs  typeck.smt2  typeck.z3  types.rs  vm.rs  vm2.rs
pancake/tests/: integration_test.rs
pancake_macro/: Cargo.toml
pancake_macro/src/: lib.rs
src/: eval.rs  lib.rs  main.rs  ops.rs  parse.rs
tests/: integration_test.rs
