[package]
name = "pancake"
version = "0.1.0"
authors = ["Jimmy Ye <jiy162@ucsd.edu>"]
edition = "2018"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "recursive_fibonacci"
harness = false

[dependencies]
nom = "5"
regex = "1"
lazy_static = "1.4.0"
inlinable_string = "0.1"
# I was using Vector to support cheap clones; seems unnecessary right now.
# im-rc = "13"

