[package]
name = "pancake"
version = "0.0.1"
authors = ["Jimmy Ye <jiy162@ucsd.edu>"]
edition = "2018"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "recursive_fibonacci"
harness = false

[dependencies]
nom = "5"
inlinable_string = "0.1"
rsmt2 = "0.10.0"
rusty_v8 = "0.9.1"
# flame = "0.2.2"
# flamer = "0.3"

pancake-macro = { path = "../pancake-macro" }
# im-rc = "13"

